--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Rich Text Editor build with Lexical" />
     <link rel="icon" href="/favicon.webp" />
 
-    <title>WYSIWYG Text Editor</title>
+    <title>Uphub Text Editor</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
